# Atoms

./: .gitignore  CMakeLists.txt  README.md
orbitals/: orbital_dirac_Z26_n3_l2_m2_jplus.json
src/: atom.cpp  atom_raytracer.cpp  atom_realtime.cpp  schrodinger.py  wave_atom_2d.cpp
